write project management and planning section

--- a/report/bibliografia/webs.bib
+++ b/report/bibliografia/webs.bib
@@ -76,3 +76,24 @@
   url = {https://es.wikipedia.org/wiki/Aromaticidad},
   urldate = {2022-04-25}
 }
+
+@online{salario_ue,
+  title = {Cuánto gana un ingeniero informático},
+  author = "Universidad Europea",
+  url = {https://universidadeuropea.com/blog/cuanto-gana-un-ingeniero-informatico/},
+  urldate = {2022-05-25}
+}
+
+@online{dias_laborables,
+  title = {¿Cuántos días laborables en el año 2022?},
+  author = "dias-laborables.es",
+  url = {https://www.dias-laborables.es/cuantos_dias_laborables_en_ano_2022_Andaluc%C3%ADa.htm},
+  urldate = {2022-05-25}
+}
+
+@online{vacaciones,
+  title = {¡Comienza el verano! Cuántos días de vacaciones me corresponden},
+  author = "Rocío González",
+  url = {https://www.sage.com/es-es/blog/dias-vacaciones/},
+  urldate = {2022-05-25}
+}
