--- a/report/prefacios/prefacio.tex
+++ b/report/prefacios/prefacio.tex
@@ -4,18 +4,13 @@
 
 %\thispagestyle{empty}
 
-\input{portada/portada_2}
-
-
-
-\cleardoublepage
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Título del Proyecto: Subtítulo del proyecto}\\
+{\large\bfseries Etiquetado de imágenes en química}\\
 \end{center}
 \begin{center}
-Nombre Apellido1 Apellido2 (alumno)\\
+Pedro Bedmar López\\
 \end{center}
 
 %\vspace{0.7cm}
@@ -32,10 +27,10 @@ Poner aquí el resumen.
 
 
 \begin{center}
-{\large\bfseries Project Title: Project Subtitle}\\
+{\large\bfseries Image labelling in chemistry}\\
 \end{center}
 \begin{center}
-First name, Family name (student)\\
+Pedro Bedmar López\\
 \end{center}
 
 %\vspace{0.7cm}
@@ -46,21 +41,7 @@ First name, Family name (student)\\
 
 Write here the abstract in English.
 
-\chapter*{}
-\thispagestyle{empty}
 
-\noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
-
-Yo, \textbf{Nombre Apellido1 Apellido2}, alumno de la titulación TITULACIÓN de la \textbf{Escuela Técnica Superior
-de Ingenierías Informática y de Telecomunicación de la Universidad de Granada}, con DNI XXXXXXXXX, autorizo la
-ubicación de la siguiente copia de mi Trabajo Fin de Grado en la biblioteca del centro para que pueda ser
-consultada por las personas que lo deseen.
-
-\vspace{6cm}
-
-\noindent Fdo: Nombre Apellido1 Apellido2
-
-\vspace{2cm}
 
 \begin{flushright}
 Granada a X de mes de 201 .
@@ -72,34 +53,29 @@ Granada a X de mes de 201 .
 
 \noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
 
-D. \textbf{Nombre Apellido1 Apellido2 (tutor1)}, Profesor del Área de XXXX del Departamento YYYY de la Universidad de Granada.
-
-\vspace{0.5cm}
-
-D. \textbf{Nombre Apellido1 Apellido2 (tutor2)}, Profesor del Área de XXXX del Departamento YYYY de la Universidad de Granada.
+Dña. \textbf{Rocío Celeste Romero Zaliz}, Profesora Titular del Departamento de Ciencias de la Computación e Inteligencia Artificial de la Universidad de Granada.
 
 
 \vspace{0.5cm}
 
-\textbf{Informan:}
+\textbf{Informa:}
 
 \vspace{0.5cm}
 
-Que el presente trabajo, titulado \textit{\textbf{Título del proyecto, Subtítulo del proyecto}},
-ha sido realizado bajo su supervisión por \textbf{Nombre Apellido1 Apellido2 (alumno)}, y autorizamos la defensa de dicho trabajo ante el tribunal
-que corresponda.
+Que el presente trabajo, titulado \textit{\textbf{Etiquetado de imágenes en química}},
+ha sido realizado bajo su supervisión por \textbf{Pedro Bedmar López}, y autoriza la defensa de dicho trabajo ante el tribunal que corresponda.
 
 \vspace{0.5cm}
 
-Y para que conste, expiden y firman el presente informe en Granada a X de mes de 201 .
+Y para que conste, expide y firma el presente informe en Granada a X de julio de 2022.
 
 \vspace{1cm}
 
-\textbf{Los directores:}
+\textbf{La directora:}
 
 \vspace{5cm}
 
-\noindent \textbf{Nombre Apellido1 Apellido2 (tutor1) \ \ \ \ \ Nombre Apellido1 Apellido2 (tutor2)}
+\noindent \textbf{Rocío Celeste Romero Zaliz}
 
 \chapter*{Agradecimientos}
 \thispagestyle{empty}
