--- a/report/proyecto.tex
+++ b/report/proyecto.tex
@@ -31,6 +31,8 @@
 \usepackage[backend=biber, style=numeric, sorting=ynt]{biblatex}
 \renewbibmacro{in:}{}
 
+\usepackage{booktabs}
+
 % \usepackage[
 %     a4paper,
 %     left=2.8cm,
