--- a/report/portada/portada.tex
+++ b/report/portada/portada.tex
@@ -12,28 +12,27 @@
 \includegraphics[width=0.9\textwidth]{imagenes/logo_ugr.jpg}\\[1.4cm]
 
 \textsc{ \Large TRABAJO FIN DE GRADO\\[0.2cm]}
-\textsc{ INGENIERÍA EN ...}\\[1cm]
+\textsc{ INGENIERÍA INFORMÁTICA}\\[1cm]
 % Upper part of the page
 % 
 % Title
-{\Huge\bfseries Titulo del Proyecto\\
+\noindent\rule[-1ex]{\textwidth}{2pt}\\[3ex]
+{\Huge\bfseries Etiquetado de imágenes en química\\
 }
-\noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
-{\large\bfseries Subtitulo del Proyecto}
+\noindent\rule[-3ex]{\textwidth}{2pt}\\[3ex]
 \end{minipage}
 
-\vspace{2.5cm}
+\vspace{1.5cm}
 \noindent\hspace*{\centeroffset}\begin{minipage}{\textwidth}
 \centering
 
-\textbf{Autor}\\ {Nombre Apellido1 Apellido2 (alumno)}\\[2.5ex]
-\textbf{Directores}\\
-{Nombre Apellido1 Apellido2 (tutor1)\\
-Nombre Apellido1 Apellido2 (tutor2)}\\[2cm]
+\textbf{Autor}\\ {Pedro Bedmar López}\\[2.5ex]
+\textbf{Directora}\\
+{Rocío Celeste Romero Zaliz}\\[2cm]
 \includegraphics[width=0.3\textwidth]{imagenes/etsiit_logo.png}\\[0.1cm]
 \textsc{Escuela Técnica Superior de Ingenierías Informática y de Telecomunicación}\\
 \textsc{---}\\
-Granada, mes de 201
+Granada, julio de 2022
 \end{minipage}
 %\addtolength{\textwidth}{\centeroffset}
 %\vspace{\stretch{2}}
